--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
+    "node-pdftk": "^2.1.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prettier": "^2.1.2",
