--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
     "node-pdftk": "^2.1.3",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prettier": "^2.1.2",
+    "sendmail": "^1.6.1",
     "validator": "^13.1.17"
   },
   "devDependencies": {
