--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
     "node-pdftk": "^2.1.3",
