--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "exceljs": "^4.2.0",
     "express": "^4.17.1",
+    "flat": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.14",
