--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
+    "csv-writer": "^1.6.0",
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "flat": "^5.0.2",
