--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
+    "node-ews": "^3.4.2",
     "node-pdftk": "^2.1.3",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
