--- a/client/package.json
+++ b/client/package.json
@@ -3,29 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
     "@popperjs/core": "^2.9.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
     "classnames": "^2.2.6",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
     "fill-pdf": "^1.1.0",
-    "html-webpack-plugin": "^5.3.2",
     "jwt-decode": "^3.0.0",
     "moment": "^2.29.1",
-    "mongodb": "^4.0.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -33,9 +25,7 @@
     "react-select-country-list": "^2.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
