--- a/package.json
+++ b/package.json
@@ -25,22 +25,15 @@
   },
   "homepage": "https://github.com/phresp/tutor-tool#readme",
   "dependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "csv-writer": "^1.6.0",
-    "dotenv": "^10.0.0",
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "flat": "^5.0.2",
-    "html-webpack-plugin": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongodb": "^4.0.1",
     "mongoose": "^5.10.14",
     "multer": "^1.4.2",
     "node-ews": "^3.4.2",
@@ -50,12 +43,8 @@
     "passport-jwt": "^4.0.0",
     "passport-saml": "^2.2.0",
     "prettier": "^2.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "sendmail": "^1.6.1",
-    "validator": "^13.1.17",
-    "webpack": "^5.47.1",
-    "webpack-cli": "^4.7.2"
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
